@@ -1,17 +1,3 @@
-load als nicht-toplevel form kann compilerfehler geben:
-1.lisp: 1 2 3
-(if t (load "1.lisp"))
-->
-    // toplevel forms
-    protected Object runbody() throws Exception {
-        values = null;
-        loc = "line 2:1..2:16: (if t (load \"1\"))";
-        return (true
-        ? (1L2L3L)
-        : (Object)null);
-    }
-}
-
 
 Clojure laesst "function calls" von maps zu
 
@@ -76,16 +62,6 @@ Neu: Murmel raise                  ... (raise condition-type msg) macht throw ne
 
 format könnte noch "Tilde Slash: Call Function ~/name/" unterstützen: http://www.lispworks.com/documentation/HyperSpec/Body/22_ced.htm
 parameter reihenfolge: stream arg colonp at-sign-p more-params
-
-
-
-jmurmel + jrunscript dokumentieren: https://docs.oracle.com/en/java/javase/19/docs/specs/man/jrunscript.html
-$ jrunscript -cp jmurmel.jar -l jmurmel -f ../../samples.murmel/fizzbuzz.lisp
-1, 2, Fizz, 4, Buzz, Fizz, 7, 8, Fizz, Buzz, 11, Fizz, 13, 14, Fizz Buzz, 16, 17, Fizz, 19, Buzz, Fizz,
-22, 23, Fizz, Buzz, 26, Fizz, 28, 29, Fizz Buzz, 31, 32, Fizz, 34, Buzz, Fizz, 37, 38, Fizz, Buzz, 41,
-Fizz, 43, 44, Fizz Buzz, 46, 47, Fizz, 49, Buzz, Fizz, 52, 53, Fizz, Buzz, 56, Fizz, 58, 59, Fizz Buzz,
-61, 62, Fizz, 64, Buzz, Fizz, 67, 68, Fizz, Buzz, 71, Fizz, 73, 74, Fizz Buzz, 76, 77, Fizz, 79, Buzz,
-Fizz, 82, 83, Fizz, Buzz, 86, Fizz, 88, 89, Fizz Buzz, 91, 92, Fizz, 94, Buzz, Fizz, 97, 98, Fizz, Buzz
 
 
 CTRL-C aka sigint handlen/ umlenken?
